--- a/2CP.Tests/2CP.Tests.csproj
+++ b/2CP.Tests/2CP.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -21,6 +21,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\2CP.Game\2CP.Game.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Shared Steps\Thens\" />
+    <Folder Include="Shared Steps\Whens\" />
   </ItemGroup> 
 
 </Project>
