Refactored Game Validation to use FluentValidations validator pattern. Refactored GameServerFixture to allow test class to register any dependencies required. Everything else will be auto-mocked.

--- a/2CP.Game/2CP.Game.csproj
+++ b/2CP.Game/2CP.Game.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>_2CP.Game</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.4.0" />
+  </ItemGroup>
+
 </Project>
