Implemented main presentation mechanisms for Game app (console). You can currently play through the game start to finsh. There is nothing happening in each round yet.

--- a/2PC.App/2PC.App.csproj
+++ b/2PC.App/2PC.App.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>_2PC.App</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\2CP.Game\2CP.Game.csproj" />
+  </ItemGroup>
 
 </Project>
