--- a/2PC.App/2PC.App.csproj
+++ b/2PC.App/2PC.App.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Colorful.Console" Version="1.2.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\2CP.Game\2CP.Game.csproj" />
   </ItemGroup>
 
